Bug 162075 - size of text box in header
Summary: size of text box in header
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Textbox
  Show dependency treegraph
 
Reported: 2024-07-17 14:59 UTC by raal
Modified: 2025-09-04 06:03 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (25.99 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-07-17 14:59 UTC, raal
Details
printscreen from Word (13.65 KB, image/png)
2024-07-17 14:59 UTC, raal
Details
older LO version (37.61 KB, image/png)
2024-07-17 15:00 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2024-07-17 14:59:16 UTC
Description:
Wrong Text box size in header. 

Steps to Reproduce:
1. open attached file
2.
3.

Actual Results:
Text box size different than in Word

Expected Results:
as in Word


Reproducible: Always


User Profile Reset: No

Additional Info:
It was not never perfect, but better before 5.4
Comment 1 raal 2024-07-17 14:59:33 UTC
Created attachment 195359 [details]
test file
Comment 2 raal 2024-07-17 14:59:49 UTC
Created attachment 195360 [details]
printscreen from Word
Comment 3 raal 2024-07-17 15:00:17 UTC
Created attachment 195361 [details]
older LO version
Comment 4 raal 2024-07-17 15:06:02 UTC
This seems to have begun at the below commit in bibisect repository/OS bibisect-linux-64-5.3.
Adding Cc: to Miklos Vajna ; Could you possibly take a look at this one?
Thanks
 58a5c879384dab1deaa21fcd1f353f97f5e0f955 is the first bad commit
commit 58a5c879384dab1deaa21fcd1f353f97f5e0f955
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Oct 25 15:33:28 2016 +0200

    source c761df1e42fd11acc5fc05b0baacd803c3788ca6
30255: tdf#84678 DOCX import: fix handling of textbox margins | https://gerrit.libreoffice.org/c/core/+/30255
Comment 5 m_a_riosv 2024-07-17 23:03:39 UTC
Reproducible, even resaving with Word.
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ddcc9515bc4313b580fad6474b603266ef2b9c15
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2024-08-05 13:15:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f31c60023243459b0565945790b094d10fe1c13c

tdf#162075 sw textbox: map a shape's wordwrap=no to the frame's width type

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-08-20 14:39:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/9478aa91f85545aef89bd6b7e7ab67d95326403b

tdf#162075 sw textbox: map a shape's wordwrap=no to the frame's width type

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.